Add HLD step